...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tAb-LJ-QSw" userLabel="Like Button">
                                                    <rect key="frame" x="370" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="en5-U2-8DZ" eventType="touchUpInside" id="fDx-cf-72P"/>
...
                                    <constraint firstAttribute="width" constant="60" id="sxm-Ei-1se"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P1M-qa-Pn9">
                                <rect key="frame" x="16" y="760" width="398" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="efS-Ku-Yz0"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <connections>
                                    <outlet property="delegate" destination="WAX-Bl-C1P" id="Wnh-KA-dJw"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C0b-2J-1uc">
                                <rect key="frame" x="9" y="9" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="back"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Qt1-OT-7fM"/>
                                    <constraint firstAttribute="width" constant="48" id="e9f-P5-mg2"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
