...
            with: UIImage(named: "Exit") ?? UIImage(),
            target: self,
            action: #selector(tapLogoutButton)
        )
        logoutButton.tintColor = .ypRed
        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        logoutButton.accessibilityIdentifier = "logout"
        view.addSubview(logoutButton)
    }

    private func setupConstraints() {
        NSLayoutConstraint.activate([
            profileImage.heightAnchor.constraint(equalToConstant: 70),
...

    @objc
    private func tapLogoutButton() {
        let alert = AlertModel(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            buttonTexts: ["Да", "Нет"]
        ) { [weak self] index in
            guard let self else {return}

            if index == 0 {
                presenter?.logOut()
            } else {
...
